--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # main links
-# main:
-#   - title: "Archive"
-#     url: /year-archive/
-#   - title: "Tag"
-#     url: /tags/
-#   - title: "Category"
-#     url: /categories/
+main:
+  - title: "Archive"
+    url: /year-archive/
+  - title: "Tag"
+    url: /tags/
+  - title: "Category"
+    url: /categories/
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
